<resources>
    <string name="app_name">LiveError</string>
    <string name="sign_up_title">Create Account</string>
    <string name="sign_up_get_started">Sign up to get started</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="repassword_hint">Repassword</string>
    <string name="username_hint">Username</string>
    <string name="emailEmptyError">Email is required.</string>
    <string name="emailContainError">Email is must contain @ and .</string>
    <string name="emailShortError">Email is too short.</string>
    <string name="emailLongError">Email is too long.</string>
    <string name="usernameEmptyError">Username is required.</string>
    <string name="usernameContainError">Username can only include a–z, 0-9 and _ characters.</string>
    <string name="usernameShortError">Username is too short.</string>
    <string name="usernameLongError">Username is too long.</string>
    <string name="repasswordError">Please check your passwords</string>
    <string name="repasswordSuccess">Passwords match</string>
    <string name="passwordEmptyError">Password is required.</string>
    <string name="passwordShortError">Password is too short.</string>
    <string name="passwordLongError">Password is too long.</string>
    <string name="passwordContainDigitUpperCaseLowerCaseError">Password must contain one digit, one uppercase letter and one lowercase letter.</string>
    <string name="passwordContainDigitUpperCaseSpecialCharError">Password must contain one digit, one uppercase letter and one special character.</string>
    <string name="passwordContainDigitLowerCaseSpecialCharError">Password must contain one digit, one lowercase letter and one special character.</string>
    <string name="passwordContainUpperCaseLowerCaseSpecialCharError">Password must contain one uppercase letter,one lowercase letter and one special character.</string>
    <string name="passwordContainDigitUpperCaseError">Password must contain one digit and one uppercase letter.</string>
    <string name="passwordContainDigitLowerCaseError">Password must contain one digit and one lowercase letter.</string>
    <string name="passwordContainDigitSpecialCharError">Password must contain one digit and one special character.</string>
    <string name="passwordContainUpperCaseLowerCaseError">Password must contain one uppercase letter and one lowercase letter.</string>
    <string name="passwordContainUpperCaseSpecialCharError">Password must contain one uppercase letter and one special character.</string>
    <string name="passwordContainLowerCaseSpecialCharError">Password must contain one lowercase letter and one special character.</string>
    <string name="passwordContainDigitError">Password must contain one digit.</string>
    <string name="passwordContainUpperCaseError">Password must contain one uppercase letter.</string>
    <string name="passwordContainLowerCaseError">Password must contain one lowercase letter.</string>
    <string name="passwordContainSpecialCharError">Password must contain one special character.</string>
    <string name="successfulTitle">Başarılı</string>
</resources>